<resources>
    <string name="app_name">Mental Arithmetic</string>
    <string name="app_description">Keep your brain in shape!</string>

    <!-- Activities -->
    <string name="activity_home">@string/app_name</string>
    <string name="activity_pick_operation_type">Pick an operation type</string>
    <string name="activity_pick_difficulty">Pick a difficulty</string>
    <string name="activity_main">Play :)</string>
    <string name="activity_credits">Credits</string>
    <string name="activity_settings">Settings</string>
    <!-- Fragments -->
    <string name="fragment_additions">@string/additions</string>
    <string name="fragment_subtractions">@string/subtractions</string>
    <string name="fragment_multiplications">@string/multiplications</string>
    <string name="fragment_divisions">@string/divisions</string>

    <!-- Menus -->
    <string name="menu_credits">Credits</string>
    <string name="menu_settings">Settings</string>
    <string-array name="new_game_menu">
        <item>New Game</item>
        <item>Scores</item>
        <item>Credits</item>
    </string-array>
    <string-array name="difficulties_menu">
        <item>Very easy</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very hard</item>
    </string-array>
    <string-array name="operation_type_menu">
        <item>@string/additions</item>
        <item>@string/subtractions</item>
        <item>@string/multiplications</item>
        <item>@string/divisions</item>
    </string-array>


    <!-- Credits page -->
    <string name="credits_author_title">About me</string>
    <string name="credits_author_text">This app was entirely designed and programed by Marie-Anne Sinfreu</string>
    <string name="credits_icon_title">Icon</string>
    <string name="credits_icon_text">The Launcher icon was made by Pixel Buddha from
        http://www.flaticon.com/authors/pixel-buddha</string>

    <!-- Settings page -->
    <string name="settings_difficulty_category_title">Difficulty level</string>
    <string name="pref_addition_level_title">Addition level</string>
    <string name="pref_subtraction_level_title">Subtraction level</string>
    <string name="pref_multiplication_level_title">Multiplication level</string>
    <string name="pref_division_level_title">Division level</string>
    <string name="pref_operations_level_default">EASY</string>
    <string-array name="pref_operations_level_titles">
        <item>Very easy</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very hard</item>
    </string-array>
    <string-array name="pref_operations_level_values">
        <item>VERY_EASY</item>
        <item>EASY</item>
        <item>MEDIUM</item>
        <item>HARD</item>
        <item>VERY_HARD</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_empty_input">Required!</string>
    <string name="submit">submit</string>
    <string name="additions">Additions</string>
    <string name="subtractions">Subtractions</string>
    <string name="multiplications">Multiplications</string>
    <string name="divisions">Divisions</string>
    <string name="activity_score">Liederboard</string>
</resources>
