<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_group_operations"
        android:checkableBehavior="single">

        <item
            android:id="@+id/additions"
            android:title="@string/fragment_additions" />
        <item
            android:id="@+id/subtractions"
            android:title="@string/fragment_subtractions" />
        <item
            android:id="@+id/multiplications"
            android:title="@string/fragment_multiplications" />
        <item
            android:id="@+id/divisions"
            android:title="@string/fragment_divisions" />
    </group>

    <group android:id="@+id/menu_group_more">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about_black_24dp"
            android:title="@string/menu_credits" />

    </group>

</menu>
