<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_difficulty_category_title">

        <ListPreference
            android:key="additions_level"
            android:defaultValue="@string/pref_operations_level_default"
            android:entries="@array/pref_operations_level_titles"
            android:entryValues="@array/pref_operations_level_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_addition_level_title"
            />

        <ListPreference
            android:key="subtractions_level"
            android:defaultValue="@string/pref_operations_level_default"
            android:entries="@array/pref_operations_level_titles"
            android:entryValues="@array/pref_operations_level_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_subtraction_level_title"
            />

        <ListPreference
            android:key="multiplications_level"
            android:defaultValue="@string/pref_operations_level_default"
            android:entries="@array/pref_operations_level_titles"
            android:entryValues="@array/pref_operations_level_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_multiplication_level_title"
            />

        <ListPreference
            android:key="divisions_level"
            android:defaultValue="@string/pref_operations_level_default"
            android:entries="@array/pref_operations_level_titles"
            android:entryValues="@array/pref_operations_level_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_division_level_title"
            />

    </PreferenceCategory>

</PreferenceScreen>
