<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.meewii.mentalarithmetic.activities.CreditsActivity"
    tools:showIn="@layout/activity_credits"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/credits_author_title"
        style="@style/Text.Title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/credits_author_text"
        style="@style/Text"
        />

    <View
        style="@style/Split"
        android:layout_marginBottom="@dimen/spacing_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/credits_icon_title"
        style="@style/Text.Title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/credits_icon_text"
        android:autoLink="web"
        android:textColorLink="@color/cyan_600"
        style="@style/Text"
        />

    <View
        style="@style/Split"
        android:layout_marginBottom="@dimen/spacing_small" />

</LinearLayout>
